# wordle

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  OptiNexus_tasks.md  README.md  Wordle_Functions.ipynb  Wordle_Solver.ipynb  coursera_coding.py  fathomnet.yaml  pyproject.toml  requirements.txt  utils.py  wordle-answers.txt  wordle_functions.py  wordle_helpers.py  wordle_ranking.csv  wordle_solver.ipynb
.ipynb_checkpoints/: Wordle_Solver-checkpoint.ipynb  wordle_ranking-checkpoint.csv
notebooks/: README.md  Wordle_Functions.ipynb  info_entropy.ipynb  mapless_diff.ipynb  wordle_solver.ipynb
wordle/: cli.py  coursera_coding.py  plot_scores.py  utils.py  wordle-answers.txt  wordle_ranking.csv
