[project]
name = "wordle"
version = "0.0.1"
authors = [{ name = "Murilo Gustineli", email = "murilogustineli@gmail.com" }]
description = "Wordle helper package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "notebook",
    "ipykernel",
    "openpyxl",
    "jupyterlab",
    "black",
    "pre-commit",
    "torch>=2.5.1",
    "scikit-learn>=1.3.2",
    "tabulate",
]

[project.scripts]
wordle = "wordle.cli:main"

[project.urls]
Homepage = "https://github.com/murilogustineli/wordle"
Issues = "https://github.com/murilogustineli/wordle/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wordle"]
namespaces = false
